fixed overflow error

--- a/modules/pathfinding/pathfinding-style.css
+++ b/modules/pathfinding/pathfinding-style.css
@@ -1,4 +1,7 @@
-body {
+html, body {
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
     font-family: 'Verdana' !important;
 }
 
